2008-02-18  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Bug in get_conn_type since SVN r1194 crashes
	http-bind and http-poll (thanks to Brian Cully) (EJAB-526)

2008-02-16  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Merge SVN r1164, and fix the merge
	of SVN r1179 (EJAB-496)

2008-02-15  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.0.txt: Describe in the Release Notes the
	upgrade instructions (EJAB-522)

2008-02-15  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_sm.erl: Retreive connection type in
	sm_register_connection_hook
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_auth_anonymous.erl: Likewise

2008-02-14  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Allow unmoderated rooms (EJAB-437)
	* src/msgs/*: Recover old translations to several languages from
	ejabberd 1.1.4

2008-02-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Fixed native support for all the
	ACL types (EJAB-253)

	* src/acl.erl: Normalize ACL before adding to the configuration
	tables (EJAB-521)

2008-02-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: event used in place of x when
	xmlns is pubsub#event (EJAB-518)

2008-02-08  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Include the error condition in the
	presence status when kicking a participant due to an error
	stanza (EJAB-496)

	* src/ejabberd.cfg.example: Document options to SQL keep alive
	interval and pool size (EJAB-206)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2008-02-06  Mickael Remond <mremond@process-one.net>

	* src/mod_pubsub/node_buddy.erl: Fixed typo
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise